<resources>
    <string name="app_name">Fityo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="crea_scheda">Crea Scheda</string>
    <string name="title_activity_base_acitivity">BaseAcitivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inserisce_data">Inserisce Data</string>
    <string name="accessori_da_usare_cose_da_non_dimenticate">accessori da usare , cose da non dimenticate</string>
    <string name="gruppo_musculare">Gruppo Musculare</string>
    <string name="insensita">Intensita</string>
    <string name="nome">nome</string>
    <string name="insrisce_nome">insrisce nome</string>
    <string name="n_di_serie">N di serie</string>
    <string name="n_esecuzioni">N esecuzioni</string>
    <string name="save">Save</string>
    <string name="essercisio_nome">essercisio nome</string>
    <string name="add">Add</string>
    <string name="isometria">isometria</string>
    <string name="title_activity_compose">ComposeActi</string>
    <string name="gruppo_muslcolare">Gruppo Muslcolare</string>
    <string name="intensita">Intensita</string>
    <string name="totale_essercissi">Totale Essercissi</string>
    <string name="data">Data</string>
    <string name="salva_ed_esci">Salva ed esci</string>
    <string name="inserisci_nome_sheda">Inserisci Nome Sheda</string>
    <string name="insrisci_n_serie">insrisci N serie</string>
    <string name="attrezzi">attrezzi</string>
    <string name="x">X</string>
    <string name="seleziona_un_periodo">Seleziona un periodo</string>
    <string name="analytics_advanced">Analytics AI</string>
    <string name="chat_ai">Domande sui tuoi dati</string>
    <string name="select_period">Select period</string>
    <string name="dd_mm_yyyy">dd/MM/yyyy</string>
    <string name="dd_mm_yyyy_simplea_daat_format">dd/MM/yyyy</string>
    <string name="title_activity_filter_schede">ActivityFilterSchede</string>
    <string name="agggiungi_filtri">agggiungi filtri</string>
    <string name="intesit">Intensita</string>
    <string name="apri_schede">Apri Schede</string>
    <string name="nessuna_scheda_title">Nessuna scheda salvata</string>
    <string name="nessuna_scheda_description">Crea la tua prima scheda per iniziare a monitorare gli allenamenti.</string>
    <string name="back_content_description">Torna indietro</string>
    <string name="add_scheda_content_description">Aggiungi scheda</string>
    <string name="detail_exercises_title">Esercizi nella scheda</string>
    <string name="detail_no_exercises">Nessun esercizio presente: apri la scheda per aggiungerne altri.</string>
    <string name="detail_manage_button">Gestisci scheda / aggiungi esercizi</string>
    <string name="detail_open_legacy">Apri editor completo</string>
    <string name="export_pdf">Esporta scheda in PDF</string>
    <string name="export_pdf_success">PDF salvato: %1$s</string>
    <string name="export_pdf_error">Errore durante l\'esportazione del PDF</string>
    <string name="export_pdf_saved">PDF salvato in Download/Fityo</string>
    <string name="share_pdf">Condividi scheda</string>
    <string name="share_pdf_title">Condividi PDF tramite</string>
    <string name="share_fitx_title">Condividi file FitYo tramite</string>
    <string name="share_sheet_title">Condividi o esporta</string>
    <string name="share_sheet_subtitle">Scegli come vuoi condividere questa scheda</string>
    <string name="share_action_export_pdf">Esporta PDF</string>
    <string name="share_action_export_pdf_desc">Salva il PDF nella cartella Download</string>
    <string name="share_action_share_pdf">Condividi PDF</string>
    <string name="share_action_share_pdf_desc">Invia il PDF a un\'altra app</string>
    <string name="share_action_export_fitx">Esporta FitX</string>
    <string name="share_action_export_fitx_desc">Salva il file .fitx (JSON) nella cartella Download</string>
    <string name="share_action_share_fitx">Condividi FitX</string>
    <string name="share_action_share_fitx_desc">Invia il file .fitx a un\'altra app</string>
    <string name="duration_minutes_label">Min</string>
    <string name="duration_seconds_label">Sec</string>
    <string name="export_meta_title">Titolo professionale</string>
    <string name="export_meta_coach">Nome creatore della scheda</string>
    <string name="export_meta_athlete">Nome atleta / cliente</string>
    <string name="export_meta_start">Data inizio scheda</string>
    <string name="export_meta_end">Data fine scheda</string>
    <string name="export_meta_section">Dettagli per il PDF</string>
    <string name="exercise_add_title">Aggiungi esercizio</string>
    <string name="exercise_edit_title">Modifica esercizio</string>
    <string name="exercise_name_label">Nome esercizio</string>
    <string name="exercise_attrezzo_label">Attrezzo</string>
    <string name="exercise_sets_label">Serie</string>
    <string name="exercise_reps_label">Ripetizioni</string>
    <string name="exercise_isometria_label">Isometria (s)</string>
    <string name="exercise_recupero_label">Recupero (s)</string>
    <string name="exercise_save">Salva</string>
    <string name="exercise_cancel">Annulla</string>
    <string name="exercise_validation_error">Compila i campi obbligatori con numeri validi</string>
    <string name="dashboard_stats_title">Overview</string>
    <string name="dashboard_total_schede">Totale schede</string>
    <string name="dashboard_total_esercizi">Totale esercizi</string>
    <string name="dashboard_favorite_schede">Preferite</string>
    <string name="dashboard_last_session">Ultima sessione</string>
    <string name="dashboard_last_session_none">Mai registrata</string>
    <string name="dashboard_days_since">Giorni dall\'ultimo</string>
    <string name="dashboard_most_trained">Gruppo preferito</string>
    <string name="dashboard_avg_per_week">Media settimanale</string>
    <string name="dashboard_no_data">N/D</string>
    <string name="dashboard_days_format">%d giorni</string>
    <string name="dashboard_avg_format">%.1f schede/sett</string>
    <string name="dashboard_completed_schede">Completate</string>
    <string name="dashboard_active_days">Giorni attivi</string>
    <string name="dashboard_total_steps">Passi totali</string>
    <string name="dashboard_avg_heart_rate">BPM medio</string>
    <string name="dashboard_undated_note">%d schede senza data non rientrano nel periodo</string>
    <string name="dashboard_muscle_distribution">Distribuzione gruppi muscolari</string>
    <string name="dashboard_intensity_distribution">Distribuzione intensita</string>
    <string name="dashboard_consistency_title">Consistenza</string>
    <string name="dashboard_consistency_subtitle">Allenamenti completati a settimana</string>
    <string name="dashboard_consistency_unit">a settimana</string>
    <string name="dashboard_zone_low">Bassa</string>
    <string name="dashboard_zone_steady">Costante</string>
    <string name="dashboard_zone_high">Alta</string>
    <string name="dashboard_radar_title">Equilibrio muscolare</string>
    <string name="dashboard_radar_subtitle">Volume relativo dei gruppi piu allenati</string>
    <string name="dashboard_trend_title">Andamento settimanale</string>
    <string name="dashboard_trend_subtitle">Allenamenti completati per settimana</string>
    <string name="dashboard_muscle_subtitle">Quota di ogni gruppo sul totale</string>
    <string name="dashboard_intensity_subtitle">Quante schede per livello di sforzo</string>
    <string name="dashboard_week_subtitle">In quali giorni ti alleni davvero</string>
    <string name="dashboard_hero_completed">Allenamenti completati</string>
    <string name="dashboard_hero_of">su %d schede</string>
    <string name="dashboard_period_7">7 giorni</string>
    <string name="dashboard_period_30">30 giorni</string>
    <string name="dashboard_period_90">90 giorni</string>
    <string name="dashboard_period_all">Tutto</string>
    <string name="dashboard_chart_muscle_a11y">Distribuzione degli allenamenti per gruppo muscolare</string>
    <string name="dashboard_chart_week_a11y">Allenamenti per giorno della settimana</string>
    <string name="dashboard_chart_intensity_a11y">Schede per livello di intensita</string>
    <string name="dashboard_chart_radar_a11y">Confronto del volume tra i gruppi muscolari</string>
    <string name="dashboard_chart_trend_a11y">Allenamenti completati settimana per settimana</string>
    <string name="notifications_history_title">Cronologia notifiche</string>
    <string name="notifications_empty">Nessuna notifica presente</string>
    <string name="notifications_no_appointments_today">Nessun appuntamento oggi</string>
    <string name="notifications_no_appointments_hint">I tuoi appuntamenti del giorno appariranno qui</string>
    <string name="no_data_chart">Nessun dato disponibile</string>
    <string name="bar_label_intensity">Media intensita per gruppo</string>
    <string name="bar_label_week">Frequenza allenamenti per giorno</string>
    <string name="week_chart_title">Frequenza Allenamenti Settimanale</string>
    <string name="week_chart_description">Numero di allenamenti per ogni giorno della settimana</string>
    <string name="select_muscle_groups_title">Seleziona gruppi muscolari</string>
    <string name="select_muscle_groups_hint">Puoi selezionare piu gruppi per allenamenti misti</string>
    <string name="muscle_groups_selected">Gruppi selezionati: %s</string>
    <string name="exercise_weight_label">Peso (kg)</string>
    <string name="exercise_weight_hint">Opzionale</string>
    <string name="home_card_subtitle_default">Allenamento personalizzato</string>
    <string name="home_greeting">Inizia il tuo allenamento</string>
    <string name="home_card_subtitle_create">Configura la tua prossima sessione</string>
    <string name="home_card_subtitle_open">Riapri e modifica le tue schede</string>
    <string name="home_card_subtitle_dashboard">Statistiche e focus muscolare</string>
    <string name="home_card_subtitle_diet">Feedback nutrizionale per l\'allenamento</string>
    <string name="diet_intelligence_title">Sessione Dieta Intelligente</string>
    <string name="diet_intelligence_subtitle">Gemma + Open Food Facts per i macro di oggi</string>
    <string name="diet_intelligence_goal_title">Obiettivo</string>
    <string name="diet_intelligence_goal_body">Valuta la qualita nutrizionale in relazione all\'allenamento del giorno.</string>
    <string name="diet_intelligence_flow_title">Flusso rapido</string>
    <string name="diet_intelligence_flow_body">1. Scansiona barcode o cerca un prodotto\n2. Salva i macro della giornata\n3. Gemma genera il consiglio</string>
    <string name="diet_intelligence_ai_title">Consiglio Gemma</string>
    <string name="diet_intelligence_ai_body">Incrocia i macro con il workout e ti suggerisce aggiustamenti mirati.</string>
    <string name="diet_scan_title">Scanner e input</string>
    <string name="diet_scan_barcode">Scansiona barcode</string>
    <string name="diet_search_hint">Cerca prodotto (nome o marca)</string>
    <string name="diet_search_button">Cerca</string>
    <string name="diet_ocr_button">OCR tabella nutrizionale</string>
    <string name="diet_product_title">Prodotto</string>
    <string name="diet_quantity_hint">Quantita in grammi</string>
    <string name="diet_add_button">Aggiungi alla giornata</string>
    <string name="diet_manual_title">Inserimento manuale</string>
    <string name="diet_manual_grams">Quantita (g)</string>
    <string name="diet_manual_proteins">Proteine (g)</string>
    <string name="diet_manual_carbs">Carboidrati (g)</string>
    <string name="diet_manual_fats">Grassi (g)</string>
    <string name="diet_manual_kcal">Kcal</string>
</resources>