<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="6dp"
        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="@color/card_surface">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="32dp">

            <TextView
                android:id="@+id/tvStatsTitle"
                style="@style/style_dashboard_titles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_stats_title"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTotalSchedeLabel"
                style="@style/style_dashboard_titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/dashboard_total_schede"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvStatsTitle" />

            <TextView
                android:id="@+id/tvTotalSchedeValue"
                style="@style/style_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                app:layout_constraintBaseline_toBaselineOf="@id/tvTotalSchedeLabel"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvFavoriteSchedeLabel"
                style="@style/style_dashboard_titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/dashboard_favorite_schede"
                app:layout_constraintStart_toStartOf="@id/tvTotalSchedeLabel"
                app:layout_constraintTop_toBottomOf="@id/tvTotalSchedeLabel" />

            <TextView
                android:id="@+id/tvFavoriteSchedeValue"
                style="@style/style_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                app:layout_constraintBaseline_toBaselineOf="@id/tvFavoriteSchedeLabel"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvTotalExercisesLabel"
                style="@style/style_dashboard_titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/dashboard_total_esercizi"
                app:layout_constraintStart_toStartOf="@id/tvFavoriteSchedeLabel"
                app:layout_constraintTop_toBottomOf="@id/tvFavoriteSchedeLabel" />

            <TextView
                android:id="@+id/tvTotalExercisesValue"
                style="@style/style_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                app:layout_constraintBaseline_toBaselineOf="@id/tvTotalExercisesLabel"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvLastSessionLabel"
                style="@style/style_dashboard_titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/dashboard_last_session"
                app:layout_constraintStart_toStartOf="@id/tvTotalExercisesLabel"
                app:layout_constraintTop_toBottomOf="@id/tvTotalExercisesLabel" />

            <TextView
                android:id="@+id/tvLastSessionValue"
                style="@style/style_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_last_session_none"
                app:layout_constraintBaseline_toBaselineOf="@id/tvLastSessionLabel"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvDaysSinceLabel"
                style="@style/style_dashboard_titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/dashboard_days_since"
                app:layout_constraintStart_toStartOf="@id/tvLastSessionLabel"
                app:layout_constraintTop_toBottomOf="@id/tvLastSessionLabel" />

            <TextView
                android:id="@+id/tvDaysSinceValue"
                style="@style/style_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_no_data"
                app:layout_constraintBaseline_toBaselineOf="@id/tvDaysSinceLabel"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvMostTrainedLabel"
                style="@style/style_dashboard_titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/dashboard_most_trained"
                app:layout_constraintStart_toStartOf="@id/tvDaysSinceLabel"
                app:layout_constraintTop_toBottomOf="@id/tvDaysSinceLabel" />

            <TextView
                android:id="@+id/tvMostTrainedValue"
                style="@style/style_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_no_data"
                app:layout_constraintBaseline_toBaselineOf="@id/tvMostTrainedLabel"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvAvgPerWeekLabel"
                style="@style/style_dashboard_titles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/dashboard_avg_per_week"
                app:layout_constraintStart_toStartOf="@id/tvMostTrainedLabel"
                app:layout_constraintTop_toBottomOf="@id/tvMostTrainedLabel" />

            <TextView
                android:id="@+id/tvAvgPerWeekValue"
                style="@style/style_dashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_no_data"
                app:layout_constraintBaseline_toBaselineOf="@id/tvAvgPerWeekLabel"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
