<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Layout delle Schede -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_schede"
        android:layout_width="match_parent"
        android:background="#bdbdbd"

        android:layout_height="match_parent"
        android:visibility="visible">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSchede"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="4"
            tools:listitem="@layout/m_list_schede" />

        <!-- Floating Button per aprire i filtri -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_filter_list_24"
            app:tint="@android:color/white"
            android:contentDescription="Filtra"
            app:backgroundTint="@color/second"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Layout dei Filtri con ScrollView interno -->
    <ScrollView
        android:id="@+id/layoutfilter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/agggiungi_filtri"
                android:textAlignment="center"
                android:textColor="@color/second"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="48dp"
                android:background="@color/second"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:singleLine="true"
                app:boxStrokeWidth="3dp"
                android:id="@+id/layoutCOmplete"
                android:hint="@string/inserisci_nome_sheda"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">


                <AutoCompleteTextView
                    android:id="@+id/ed_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:dropDownWidth="match_parent"
                    android:completionHint="@string/inserisci_nome_sheda"/>
            </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:id="@+id/layoutIntensita"
                android:hint="@string/insensita"
                app:boxStrokeWidth="3dp"
                app:endIconMode="dropdown_menu"
                app:hintTextColor="@color/second"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/ed_intensita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="none"
                    android:textSize="20sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"
                android:id="@+id/layotGruppoMuscolare"
                android:hint="@string/gruppo_musculare"
                app:boxStrokeWidth="3dp"
                app:endIconMode="dropdown_menu"
                app:hintTextColor="@color/second"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/gruppu_muscolari"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="none"
                    android:textSize="20sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <android.widget.CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:theme="@style/MaterialCalendarTheme"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/applyFiltersButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Applica filtri"
                android:fontFamily="@font/raleway_bold"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/second"
                app:strokeWidth="4dp"
                android:textColor="@color/second"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clearFiltersButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Rimuovi filtri"
                android:fontFamily="@font/raleway_bold"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/second"
                app:strokeWidth="4dp"
                android:textColor="@color/second"/>

        </LinearLayout>

    </ScrollView>

    <!-- Floating Button per chiudere i filtri -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnCloseFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_filter_list_24"
        app:tint="@android:color/white"
        android:contentDescription="Chiudi filtro"
        app:backgroundTint="@color/second"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>